--- a/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/00.md
+++ b/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/00.md
@@ -1,6 +1,18 @@
-Web Components can receive data in many ways, but one of the most commmon ways is to use an attribute because attributes are declarative, static, and easy to read & write.
+Web Components can receive data in many ways, but one of the most commmon ways is to use an attribute because attributes are declarative, static, and easy to read & write in HTML!
 
-Lit will automatically convert any given attributes into properties, but some properties will not map easily to an attribute making it difficult to write the attribute.
+Every HTML Element in the browser has *attibutes* and *properties*. [*Attributes*](https://developer.mozilla.org/en-US/docs/Glossary/attribute) are additional values that describe the state of an element in HTML. [*Properties*](https://developer.mozilla.org/en-US/docs/Glossary/property/JavaScript) are the current values of an element's Javascript DOM object.
+
+For example, the `<input>` element has both a `value` attribute and a `value` property.
+
+```html
+<input value="This is setting the 'value' attribute">
+<script>
+  const inputElementReference = document.querySelector('input');
+  inputElementReference.value = 'This is setting the "value" property';
+</script>
+```
+
+Since Lit elements are HTML elements, Lit elements have both attributes and properties. Lit will automatically convert given attributes into properties, but some properties will not map easily to an attribute making it difficult to write the attribute. An example would be the `Date` object – you can see an example of this in the playground preview.
 
 Custom attribute converters address this problem.
 
