--- a/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/01.md
+++ b/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/01.md
@@ -8,7 +8,7 @@ In this example:
 
 <aside class="info">
 
-The reason we have turned off attribute conversion is because Lit does not know how to convert a string to a Javascript `Date` object. This means that the only way to pass `date` to `my-element` is via Javascript which may lead to a bad developer experience.
+The reason we have turned off attribute conversion is because the `@property` decorator or `static properties` block will tell Lit to convert a string attribute to the type passed in as the `type` option, but Lit does not know how to handle `type: Date` (string attribute to JS `Date` object conversion). This means that the only way to pass `date` to `my-element` is via Javascript which may lead to a bad developer experience.
 
 </aside>
 
@@ -18,42 +18,15 @@ Attribute converters tell Lit how to convert an attribute to a property and vice
 
 ### Built-in Attribute Converters
 
-Lit has several built-in attribute converters that are detected automatically via the `type` property of the [reactive property options](/docs/components/properties/#property-options). The built-in converters are:
+Lit has several built-in attribute converters. You can choose which built-in converter is invoked by setting the `type` property of the [reactive property options](/docs/components/properties/#property-options). The built-in converters are:
 
-<details>
-<summary><code>String</code></summary>
+* `String` *(default)*
+* `Boolean`
+* `Number`
+* `Array`
+* `Object`
 
-- to attribute: `setAttribute`
-- from attribute: `getAttribute`
-
-</details>
-<details>
-<summary><code>Boolean</code></summary>
-
-- to attribute: `toggleAttribute`
-- from attribute: `hasAttribute`
-
-<aside class="warning">
-
-This means that `<my-element prop="false">` will be converted to `true`.
-
-</aside>
-
-</details>
-<details>
-<summary><code>Number</code></summary>
-
-- to attribute: stingification and `setAttribute`
-- from attribute: `getAttribute` and `Number`
-
-</details>
-<details>
-<summary><code>Array|Object</code></summary>
-
-- to attribute: `setAttribute` and `JSON.stringify`
-- from attribute: `JSON.parse`
-
-</details>
+Notice that Lit does not have a `Date` converter built-in and thus you cannot do `type: Date` to accept a date-string attribute. You can read more on how built-in coverters convert attributes to properties and vice versa in the [Lit documentation](/docs/components/properties/#conversion-type).
 
 ## Goal for this step
 
