--- a/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/02.md
+++ b/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/02.md
@@ -1,9 +1,13 @@
-In `index.html`, `<my-element>`'s `date` property is still being set as a property. Which is not ideal for users of our component because setting properties on an element is not as intuitive or accessible setting attributes.
+In `index.html`, `<my-element>`'s `date` property is still being set as a property. Which is not ideal for users of our component because setting properties on an element is not as readable or easy as setting attributes.
+
+## Goal for this step
+
+Accept `date-str` as an attribute in HTML, synchronize the `date` property with `dateStr` property whenever `dateStr` changes, and display the user-defined date in a readable manner using `toLocaleDateString`.
 
 ### Accept `date-str` as an attribute
 
-* Stop passing `date` as a property to `my-element`
-* Pass `05/05/22` as an attribute to `my-element`
+* Stop passing the `Date` to `date` property of `my-element`
+* Pass `05/05/22` to the `date-str` attribute of `my-element`
 
 #### index.html
 
@@ -14,10 +18,6 @@ In `index.html`, `<my-element>`'s `date` property is still being set as a proper
 ```
 
 Now you may notice that the date displayed is not the same as the one you passed in. This is because the `date` property is being rendered. `date` needs to be synchonized with `dateStr` whenever `dateStr` changes.
-
-## Goal for this step
-
-Synchronize `date` with `dateStr` whenever `dateStr` changes.
 
 ### Update `date` when `dateStr` changes
 
