--- a/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/03.md
+++ b/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/03.md
@@ -1,22 +1,22 @@
-The current implementation is not great:
+The current implementation can be greatly improved:
 
 - There is an unneccessary input of `dateStr` that has the job to accept a string
 - The code around `willUpdate` is a bit messy and imperative
 - If the user sets `date` to a new date, the `dateStr` will not be updated
 
-The root cause of these issues is that Lit does not know how to convert a `string` attribute to a `Date` object property. This is where Lit attribute converters come in!
+The root cause of these issues is that Lit does not have a default converter that converts a `string` to a `Date` object. This is where Lit attribute converters come in!
 
-## Complex Attribute Converter
+## Custom Attribute Converter
 
 Lit provides a way to provide your own custom attribute converters for more complex data structures.
 
-In this example, a complex custom attribute converter can clean up the implementation of `my-element` by providing a means to convert a `string` attribute to a `Date` object property.
+In this example, a "complex" custom attribute converter can clean up the implementation of `my-element` by providing a means to convert a `string` attribute to a `Date` object property.
 
 ## Goal for this step
 
-Define a complex attribute converter that can convert a date-string attribute into a Javascript `Date` object property and vice versa.
+Define a custom attribute converter that can convert a date-string attribute into a Javascript `Date` object property and vice versa.
 
-### Creating the Complex Attribute Converter
+### Creating the Custom Attribute Converter
 
 * In a file called `date-converter.(ts|js)`
 * Export a Javascript object called `dateConverter`
