--- a/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/05.md
+++ b/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/05.md
@@ -9,6 +9,7 @@ You might want to catch up more on Reactive Properties in Lit as well as the Lit
 ### Further Reading
 
 - [Reactive Properties](/docs/components/properties/)
+- [Lit Attributes](/docs/components/properties/#attributes)
 - [Lit Lifecycle](/docs/components/lifecycle/)
 - [Property-Attribute Reflection](/docs/components/properties/#reflected-attributes)
 - [Custom Property Accessors](/docs/components/properties/#accessors)
