--- a/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/00.md
+++ b/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/00.md
@@ -12,7 +12,7 @@ For example, the `<input>` element has both a `value` attribute and a `value` pr
 </script>
 ```
 
-Since Lit elements are HTML elements, Lit elements have both attributes and properties. Lit will automatically convert given attributes into properties, but some properties will not map easily to an attribute making it difficult to write the attribute. An example would be the `Date` object – you can see an example of this in the playground preview.
+Since Lit elements are HTML elements, Lit elements have both attributes and properties. Lit can convert given attributes into properties, but some properties will not map easily to an attribute making it difficult to write the attribute. An example would be the `Date` object – you can see an example of this in the playground preview.
 
 Custom attribute converters address this problem.
 
