mention simple attribute converters

--- a/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/03.md
+++ b/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/03.md
@@ -33,7 +33,8 @@ import {ComplexAttributeConverter} from 'lit';
 
 export const dateConverter: ComplexAttributeConverter<Date> = {
   toAttribute: (date: Date) => {
-    return date.toString();
+    // or set your favorite locale!
+    return date.toLocaleDateString('en-US');
   },
   fromAttribute: (value: string) => {
     return new Date(value);
@@ -44,7 +45,8 @@ export const dateConverter: ComplexAttributeConverter<Date> = {
 ```js
 export const dateConverter = {
   toAttribute: (date) => {
-    return date.toString();
+    // or set your favorite locale!
+    return date.toLocaleDateString('en-US');
   },
   fromAttribute: (value) => {
     return new Date(value);
@@ -53,6 +55,17 @@ export const dateConverter = {
 ```
 
 {% endswitchable-sample %}
+
+<aside class="positive">
+
+If your `toAttribute` is just `toString`, then you can use a Simple Attribute
+Converter instead of a Complex Attribute Converter.
+
+A Simple Attribute Converter is not an object with `toAttribute` and
+`fromAttribute`, but rather a function that is equivalent to the `fromAttribue`
+method of a Complex Attribute Converter.
+
+</aside>
 
 
 Congratulations! You've just defined a custom attribute converter! You can read
