add link to attribute converters

--- a/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/03.md
+++ b/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/03.md
@@ -65,6 +65,8 @@ A Simple Attribute Converter is not an object with `toAttribute` and
 `fromAttribute`, but rather a function that is equivalent to the `fromAttribue`
 method of a Complex Attribute Converter.
 
+[Read more here!](/docs/components/properties/#conversion-converter)
+
 </aside>
 
 
