--- a/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/00.md
+++ b/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/00.md
@@ -1,6 +1,6 @@
 Web Components can receive data in many ways, but one of the most commmon ways is to use an attribute because attributes are declarative, static, and easy to read & write in HTML!
 
-Every HTML Element in the browser has *attibutes* and *properties*. [*Attributes*](https://developer.mozilla.org/en-US/docs/Glossary/attribute) are additional values that describe the state of an element in HTML. [*Properties*](https://developer.mozilla.org/en-US/docs/Glossary/property/JavaScript) are the current values of an element's Javascript DOM object.
+Every HTML element in the browser has *attibutes* and *properties*. [*Attributes*](https://developer.mozilla.org/en-US/docs/Glossary/attribute) are additional values that describe the state of an element in HTML. [*Properties*](https://developer.mozilla.org/en-US/docs/Glossary/property/JavaScript) are the current values of an element's Javascript DOM object.
 
 For example, the `<input>` element has both a `value` attribute and a `value` property.
 
@@ -12,7 +12,9 @@ For example, the `<input>` element has both a `value` attribute and a `value` pr
 </script>
 ```
 
-Since Lit elements are HTML elements, Lit elements have both attributes and properties. Lit can convert given attributes into properties, but some properties will not map easily to an attribute making it difficult to write the attribute. An example would be the `Date` object – you can see an example of this in the playground preview.
+Since Lit elements are HTML elements, Lit elements have both attributes and properties. Lit can convert given attributes into properties, but some properties will not map easily to an attribute making it difficult to write the attribute, because certain properties cannot easily be converted to a string.
+
+An example would be the `Date` object – you can see an example of this in the playground preview. The `Date` object is being passed in as a Javascript property in `index.html` instead of a readable, string attribute. You can see the desired behavior in the preview by clicking the "Solve" button.
 
 Custom attribute converters address this problem.
 
@@ -30,4 +32,4 @@ You will do this with the default attribute converters and then upgrade your com
 
 ## Previous knowledge
 
-It's recommended you understand the basics of [reactive properties](/docs/components/properties/) in Lit.
+It's recommended you understand the basics of [reactive properties](/docs/components/properties/) in Lit, as well as the [`willUpdate`](/docs/components/lifecycle/#willupdate) Lit lifecycle method.
