--- a/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/01.md
+++ b/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/01.md
@@ -14,7 +14,7 @@ The reason we have turned off attribute conversion is because the `@property` de
 
 ## Attribute Converters
 
-Attribute converters tell Lit how to convert an attribute to a property and vice versa in the case that a reactive property has the `reflect: true` flag.
+Attribute converters tell Lit how to convert an attribute to a property and, in the case that a reactive property has the `reflect: true` flag, vice versa.
 
 ### Built-in Attribute Converters
 
@@ -31,6 +31,14 @@ Notice that Lit does not have a `Date` converter built-in and thus you cannot do
 ## Goal for this step
 
 `my-element` accepts human-readable date attribute as a reactive property. e.g. `date-str="05/05/22"`
+
+<aside class="negative">
+
+This section is meant to exemplify the need for custom attribute converters and
+is not recommended best-practice code. If you'd like to skip to the section in
+which you write best-practice code, go to [step 4](#03).
+
+</aside>
 
 ### Accept a human-readable attribute string
 
