--- a/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/02.md
+++ b/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/02.md
@@ -1,4 +1,4 @@
-In `index.html`, `<my-element>`'s `date` property is still being set as a property. Which is not ideal for users of our component because setting properties on an element is not as readable or easy as setting attributes.
+In `index.html`, `<my-element>`'s `date` property is still being set with Javascript. Requiring Javascript to set a property is not ideal for users of a `<my-element>` because setting properties on an element this way is not as readable or easy as setting attributes.
 
 ## Goal for this step
 
