--- a/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/03.md
+++ b/packages/lit-dev-content/site/tutorials/content/custom-attribute-converter/03.md
@@ -4,7 +4,7 @@ The current implementation can be greatly improved:
 - The code around `willUpdate` is a bit messy and imperative
 - If the user sets `date` to a new date, the `dateStr` will not be updated
 
-The root cause of these issues is that Lit does not have a default converter that converts a `string` to a `Date` object. This is where Lit attribute converters come in!
+The root cause of these issues is that Lit does not have a default converter that converts a `string` to a `Date` object. This is where custom Lit attribute converters come in!
 
 ## Custom Attribute Converter
 
